# make-a-list

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: README.md
md_batch_gpt/: cli.py  config.py  file_io.py  log_io.py  openai_client.py  orchestrator.py
prompts/: 02_second.txt  03_third.txt  first.txt  second.txt
tests/: runner.py  test_cli.py  test_config.py  test_file_io.py  test_integration.py  test_log_io.py  test_orchestrator.py
tests/data/: p1.txt  p2.txt
tests/stubs/: openai.py
