[project]
name = "md-batch-gpt"
version = "0.1.0"
description = ""
authors = [
    {name = "Codex", email = "codex@openai.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.95.1,<2.0.0",
    "typer>=0.16.0,<0.17.0",
    "python-dotenv>=1.1.1,<2.0.0",
    "pytest (>=8.4.1,<9.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "ruff (>=0.12.3,<0.13.0)",
    "black (>=25.1.0,<26.0.0)",
]

[tool.poetry]
packages = [{ include = "md_batch_gpt" }]

[tool.poetry.scripts]
mdgpt = "md_batch_gpt.cli:app"

[tool.md_batch_gpt]
model = "o3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
